# tinygl

./: .clang-format  .clangd  CMakeLists.txt  Justfile  conanfile.py  vcpkg.json
shaders/: shader.frag  shader.vert
src/: app.cpp  app.hpp  builder.hpp  camera.cpp  camera.hpp  camera_plugin.cpp  camera_plugin.hpp  config.cpp  config.hpp  context.hpp  cube.hpp  event.cpp  main.cpp  main.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.hpp  pipeline.hpp  plugin.hpp  renderer_plugin.hpp  res.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp  utils.hpp  window.hpp
src/model/: cube.cpp  model.hpp  shapes.hpp
src/object/: cube_object.hpp  object.hpp
test_package/: conanfile.py
